# photoEditor

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/core/: image.cpp  image.h  layerManager.cpp  layerManager.h  tool.cpp  tool.h  toolManager.cpp  toolManager.h
src/tools/: pencil.cpp  pencil.h
src/ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui  projectwizard.cpp  projectwizard.h  projectwizard.ui  workspace.cpp  workspace.h  workspace.ui
